Header menu alignment fixed for small screens

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -54,7 +54,7 @@ ol {
 	padding: 15px;
 }
 
-.center-nenu{
+.center-menu{
 	max-width: 100%;
 	overflow: auto;
 	position: relative;
@@ -63,6 +63,33 @@ ol {
 	z-index: 400;
 	margin-left: 30px;
 }
+
+@media screen and (max-width: 62em ) {
+.logo { background-color: red;
+	width: 281px;
+	display: block;
+	vertical-align: middle;
+	margin: 0px auto;
+}
+
+.center-menu {
+	width: 100%;
+	display: block;
+	margin: 0px auto;
+	text-align: center;
+}
+
+.contribute {
+	width: 100%;
+	display: block;
+	vertical-align: middle;
+	text-align: center;
+	padding: 0px;
+	margin: 0px auto;
+	margin-top: 10px;
+}
+}
+
 .center-align	{
 	max-width: 61em;
 	margin: 0px auto;
